native/crates/specular-scene/tests/snapshots/page_title__a_page_with_a_title_shows_it_before_the_address.snap
---
source: crates/specular-scene/tests/page_title.rs
expression: app.scene_snapshot()
---
canvas page p1 100,100 400x300 r=8
screen rect 100,100 400x300 r=8 stroke=#a6a09b/1/outside
screen text "Example Domain — example.com" 100,79.5 wrap=400 ellipsis box-h=16.5 11/15.4 w500 #6b6b6b middle clip=100,79.5 400x20.5
